<resources>
    <string name="app_name">quiz</string>
    <string name="home">home</string>
    <string name="game">game</string>
    <string name="wallpaper">wallpaper</string>
    <string name="hello_my_friend">Hello, my friend</string>
    <string name="you_have_100_coins">you have 100 coins</string>
    <string name="change_level">Выбери уровень</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="question">Вопрос</string>
    <string name="time">time</string>
    <string name="result">3/5</string>
    <string name="timer">timer\n</string>
    <string name="time_end">Время истекло</string>
    <string name="my_result">Ваш результат</string>
    <string name="your_name">Ваше имя</string>
    <string name="sign_in">Войти</string>
    <string name="hello">Давайте познакомимся</string>
    <string name="score">%d</string>
    <string name="answer1">Answer 1</string>
    <string name="answer2">Answer 2</string>
    <string name="answer3">Answer 3</string>
    <string name="answer4">Answer 4</string>

</resources>